code/tui/src/app/snapshots/app__interaction_flow_tests__approval_submitting_inline.snap
---
source: code/tui/src/app/interaction_flow_tests.rs
expression: "render(&app, 80, 20)"
---











┌Approval required─────────────────────────────────────────────────────────────┐
│Run the requested command?                                                    │
│Process spawn  ·  cargo test                                                  │
│> Approve once                                                                │
│  Decline                                                                     │
│Submitting…                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘

                                                Waiting for the request result
