code/tui/src/app/snapshots/app__interaction_flow_tests__context_configuration_Fullscreen_chinese.snap
---
source: code/tui/src/app/interaction_flow_tests.rs
expression: frame
---
  .                                                           [— / —] [仪表盘]

● 请先在 /config 中设置模型上下文窗口，再发送消息。











  ⏸ 请求权限
  ────────────────────────────────────────────────────────────────────────────
  >
  ────────────────────────────────────────────────────────────────── 自动模型

  Enter 发送  ·  shift+tab 模式  ·  shift+↓/↑ 思考
