code/tui/src/app/snapshots/app__interaction_flow_tests__context_configuration_Inline_chinese.snap
---
source: code/tui/src/app/interaction_flow_tests.rs
expression: frame
---
● 请先在 /config 中设置模型上下文窗口，再发送消息。
