code/tui/src/app/snapshots/app__interaction_flow_tests__model_errors_in_conversation.snap
---
source: code/tui/src/app/interaction_flow_tests.rs
expression: frame
---
  .                                                        [— / —] [Dashboard]

● Check your provider and model configuration in /config.

● Authentication failed (401). Check your provider credentials in /config.

● Too many requests (429). Try again later.







  ⏸ Manual
  ────────────────────────────────────────────────────────────────────────────
  >
  ─────────────────────────────────────────────────────────── Automatic model

  Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
